Updated documentation. Fixed alignment of checkboxes with text.

--- a/website/static/website/css/gsdk.css
+++ b/website/static/website/css/gsdk.css
@@ -968,10 +968,12 @@ input.ct-red + span + label + span.switch-right {
 .radio .icons {
   color: #DDDDDD;
   display: block;
-  height: 20px;
+  /*height: 20px;
   left: 0;
-  position: absolute;
+  position: absolute;*/
+  position: relative;
   top: 0;
+  right: 30px;
   width: 20px;
   text-align: center;
   line-height: 21px;
